...
  return (
    <AlertContext.Provider value={{ showAlert, hideAlert, hideAllAlerts }}>
      {children}
      <View
        style={styles.alertContainer}
        pointerEvents="box-none"
        testID="alerts-container"
      >
        {alerts.map((alert, index) => (
          <AlertComponent
            key={alert.id}
            alert={alert}
            index={index}
...
